--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pomodoro-v2",
   "version": "1.0.0",
   "description": "pomo with react",
-  "main": "index.js",
+  "main": "/component/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode development",
@@ -23,5 +23,8 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "react-bootstrap": "^0.32.1"
   }
 }
