--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "pomodoro-v2",
+  "name": "reactpomodoro",
   "version": "1.0.0",
   "description": "pomo with react",
   "main": "/component/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "test": ""
   },
   "author": "Ryan Paige",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -19,12 +19,20 @@
     "css-loader": "^0.28.11",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "serviceworker-webpack-plugin": "^1.0.0-alpha02",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "moment": "^2.22.1",
+    "npm": "^6.0.0",
     "react-bootstrap": "^0.32.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "none"
   }
 }
