--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
@@ -27,6 +28,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "audio-loader": "^1.0.3",
     "moment": "^2.22.1",
     "npm": "^6.0.0",
     "react-bootstrap": "^0.32.1"
