--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
-    "test": ""
+    "test": "",
+    "pre-commit": "lint-staged"
+  },
+  "pre-commit": [
+    "pre-commit"
+  ],
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "author": "Ryan Paige",
   "license": "MIT",
@@ -18,6 +28,9 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "lint-staged": "^7.1.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
