--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "audio-loader": "^1.0.3",
     "moment": "^2.22.1",
     "npm": "^6.0.0",
-    "react-bootstrap": "^0.32.1"
+    "styled-components": "^3.2.6"
   },
   "repository": {
     "type": "git",
