--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "audio-loader": "^1.0.3",
     "moment": "^2.22.1",
     "npm": "^6.0.0",
+    "prop-types": "^15.6.1",
     "styled-components": "^3.2.6"
   },
   "repository": {
