--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/component/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack --env prod --mode production",
     "test": "",
     "pre-commit": "lint-staged"
   },
