--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "author": "Ryan Paige",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -38,9 +38,7 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
-  },
-  "dependencies": {
+    "webpack-merge": "^4.1.2",
     "audio-loader": "^1.0.3",
     "moment": "^2.22.1",
     "npm": "^6.0.0",
