--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
   "author": "Ryan Paige",
   "license": "MIT",
   "dependencies": {
+    "audio-loader": "^1.0.3",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "lint-staged": "^7.1.0",
+    "lint-staged": "^7.3.0",
+    "moment": "^2.22.2",
+    "npm": "^6.4.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.12.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "serviceworker-webpack-plugin": "^1.0.0-alpha02",
+    "prettier": "^1.14.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2",
-    "audio-loader": "^1.0.3",
-    "moment": "^2.22.1",
-    "npm": "^6.0.0",
-    "prop-types": "^15.6.1",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.4.9",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   },
   "repository": {
     "type": "git",
