fixed issues with babel versions

--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
   "author": "Ryan Paige",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.12.1",
     "audio-loader": "^1.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "chokidar": "^3.4.3",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "lint-staged": "^7.3.0",
     "moment": "^2.22.2",
-    "npm": "^6.4.1",
     "pre-commit": "^1.2.2",
     "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
@@ -40,13 +39,21 @@
     "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.21.0",
     "styled-components": "^3.4.9",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.4"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   },
   "repository": {
     "type": "git",
     "url": "none"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "babel-loader": "^8.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "webpack": "^4.44.2"
   }
 }
